--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,1 +1,12 @@
-{ "version": 2, "rewrites": [{ "source": "/(.*)", "destination": "/src/index.js" }] }
+{
+    "version": 2,
+    "builds": [
+      { "src": "src/index.js", "use": "@vercel/node" }
+    ],
+    "routes": [
+      { "src": "/upload-image", "dest": "/src/index.js" },
+      { "src": "/get-images", "dest": "/src/index.js" },
+      { "src": "/delete-image/:imageName", "dest": "/src/index.js" },
+      { "src": "/(.*)", "dest": "/src/index.js" }
+    ]
+  }
